--- a/task-1.html
+++ b/task-1.html
@@ -10,7 +10,7 @@
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <ul id="categories">
+    <ul id="categories" class="container">
       <li class="item">
         <h2>Animals</h2>
 
