--- a/task-2.html
+++ b/task-2.html
@@ -10,7 +10,7 @@
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <ul class="gallery"></ul>
+    <ul class="gallery container-task-two"></ul>
 
     <script src="./js/task-2.js" type="module"></script>
   </body>
